<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="#BDBDBD">
    <RelativeLayout android:id="@+id/aboutLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">
        <TextView android:id="@+id/aboutAppDescText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/aboutAppDescString"/>
        <TextView android:id="@+id/aboutSonLabDescText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutAppDescText"
            android:layout_marginTop="5dip"
            android:textColor="#000000"
            android:text="@string/aboutSonLabDescString"/>
        <TextView android:id="@+id/aboutWeatherDataText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutSonLabDescText"
            android:layout_marginTop="5dip"
            android:textColor="#000000"
            android:text="@string/aboutWeatherDataString"/>
        <ImageView android:id="@+id/aboutWundergroundLogo"
            android:layout_width="280dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:layout_below="@id/aboutWeatherDataText"
            android:contentDescription="@string/weatherUndergroundString"
            android:src="@drawable/wunderground_logo_dark"/>
        <TextView android:id="@+id/aboutWundergroundLinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutWundergroundLogo"
            android:layout_marginTop="2dip"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutWundergroundLinkString"/>
        <TextView android:id="@+id/aboutWundergroundTMText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutWundergroundLinkText"
            android:layout_marginTop="5dip"
            android:textColor="#000000"
            android:text="@string/aboutWundergroundTM"/>
        <TextView android:id="@+id/aboutGEONamesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_below="@id/aboutWundergroundTMText"
            android:layout_marginTop="5dip"
            android:textColor="#000000"
            android:text="@string/aboutGEONamesString"/>
        <TextView android:id="@+id/aboutIconsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_below="@id/aboutGEONamesText"
            android:layout_marginTop="5dip"
            android:textColor="#000000"
            android:text="@string/aboutIconsString"/>
        <TextView android:id="@+id/aboutSonificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_below="@id/aboutIconsText"
            android:layout_marginTop="5dip"
            android:textColor="#000000"
            android:text="@string/aboutSonificationString"/>
    </RelativeLayout>
</ScrollView>