<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_gradient_background">
    <TextView android:id="@+id/splashScreenTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:gravity="center"/>
    <ImageView android:id="@+id/splashScreenLogo"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_launcher"
        android:focusable="true"
        android:contentDescription="@string/loadingLogoString"/>
    <LinearLayout android:id="@+id/loadingLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:layout_below="@id/splashScreenLogo">
        <ProgressBar android:id="@+id/loadingBar"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:focusable="false"/>
        <TextView android:id="@+id/loadingText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="false"
            android:paddingLeft="10dip"
            android:textColor="#F8F8F8"
            android:gravity="center_vertical"
            android:text="@string/loadingString"/>
    </LinearLayout>
    <TextView android:id="@+id/startupErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/splashScreenLogo"
        android:focusable="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dip"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:visibility="gone"/>
    <ImageView android:id="@+id/wundergroundLogo"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:layout_marginBottom="18dip"
        android:src="@drawable/wunderground_logo"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:contentDescription="@string/wundergroundLogoDescriptionString"/>
</RelativeLayout>
